# MAPF-GPT

./: LICENSE  README.md  benchmark.py  create_env.py  download_dataset.py  example.py  generate_dataset.py  pyproject.toml  run.yaml  train.py
dataset/: download_dataset.py  generate_dataset.py
dataset/dataset_configs/10-medium-mazes/: 10-medium-mazes-part1.yaml  10-medium-mazes-part2.yaml  10-medium-mazes-part3.yaml  10-medium-mazes-part4.yaml
dataset/dataset_configs/11-medium-mazes-eval/: 11-medium-mazes-eval-mapf.yaml  maps.yaml
dataset/dataset_configs/12-medium-random/: 12-medium-random-part1.yaml  (+1 more)
dataset/lacam/: CMakeLists.txt  inference.py
dataset/tokenizer/: cost2go.cpp  encoder.cpp  generate_observations.py  parameters.py  tokenizer.py
dataset_configs/12-medium-random/: 12-medium-random-part2.yaml  12-medium-random-part3.yaml
dataset_configs/13-medium-random-eval/: maps.yaml
docker/: Dockerfile  build.sh  dockerfile  requirements.txt
eval_configs/01-random/: 01-random.yaml  maps.yaml
eval_configs/02-mazes/: 02-mazes.yaml  maps.yaml
eval_configs/03-warehouse/: 03-warehouse.yaml  maps.yaml
eval_configs/04-movingai/: 04-movingai.yaml  maps.yaml
eval_configs/05-puzzles/: 05-puzzles.yaml  maps.yaml
experiment_setup/: config-6M.py  config-85M.py  configurator.py  create_env.py
gpt/: fast_data_loader.py  inference.py  model.py  observation_generator.cpp  observation_generator.h
lacam/: main.cpp
mapf_gpt/: config-2M.py  inference.py  model.py  observation_generator.cpp  observation_generator.h
tokenizer/: tokenizer.py
(+7 files in other folders)
